Fix layout bugs

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -51,6 +51,34 @@ body.theme-1 {
 {
     height: 50px;
 }
+.masthead {
+    position: relative;
+    width: 100%;
+    height: auto;
+    min-height: 35rem;
+    padding: 15rem 0;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0.7) 75%, #000 100%);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+    animation-name: bg;
+    animation-duration: 5s;
+    animation-delay: 1s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes bg  {
+    from
+    {
+
+        background-image: url("../img/1.png");
+    }
+
+    to {
+        background-image: url("../img/3.png");
+    }
+}
 /*
 footer.theme-0
 {
